--- a/src/common/assets/fonts/fonts.scss
+++ b/src/common/assets/fonts/fonts.scss
@@ -7,6 +7,7 @@
       url('./TTCommons-ThinItalic.ttf') format('truetype');
   font-weight: 100;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -18,6 +19,7 @@
       url('./TTCommons-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,6 +31,7 @@
       url('./TTCommons-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -40,7 +43,7 @@
       url('./TTCommons-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
-}
+font-display: swap;  }
 
 @font-face {
   font-family: 'TT Commons';
@@ -51,7 +54,7 @@
       url('./TTCommons-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
-}
+font-display: swap;  }
 
 @font-face {
   font-family: 'TT Commons';
@@ -62,6 +65,7 @@
       url('./TTCommons-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -73,6 +77,7 @@
       url('./TTCommons-BlackItalic.ttf') format('truetype');
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -84,6 +89,7 @@
       url('./TTCommons-ExtraBold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -95,6 +101,7 @@
       url('./TTCommons-BoldItalic.ttf') format('truetype');
   font-weight: bold;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -106,6 +113,7 @@
       url('./TTCommons-DemiBoldItalic.ttf') format('truetype');
   font-weight: 600;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -117,6 +125,7 @@
       url('./TTCommons-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -128,6 +137,7 @@
       url('./TTCommons-ExtraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -139,6 +149,7 @@
       url('./TTCommons-DemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -150,6 +161,7 @@
       url('./TTCommons-ExtraLightItalic.ttf') format('truetype');
   font-weight: 200;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -161,6 +173,7 @@
       url('./TTCommons-ExtraBoldItalic.ttf') format('truetype');
   font-weight: 800;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -172,6 +185,7 @@
       url('./TTCommons-MediumItalic.ttf') format('truetype');
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -183,6 +197,7 @@
       url('./TTCommons-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -194,5 +209,6 @@
       url('./TTCommons-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 
