--- a/src/common/styles/variables.scss
+++ b/src/common/styles/variables.scss
@@ -1,6 +1,6 @@
 $rootFontSize: 16;
 
-$primaryFont: 'TT Commons', sans-serif;
+$primaryFont: 'TT Commons', -apple-system, sans-serif;
 
 $screenMd: 768px;
 $screenLg: 992px;
