--- a/src/common/components/typography/typography.module.scss
+++ b/src/common/components/typography/typography.module.scss
@@ -91,6 +91,10 @@ $accent: #516CF7;
     color: $accent;
   }
 
+  &_white-color {
+    color: #fff;
+  }
+
   &_no-wrap {
     white-space: nowrap;
   }
