--- a/src/common/components/hero/hero.module.scss
+++ b/src/common/components/hero/hero.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: stretch;
   min-height: 100%;
+  background-color: hsla(0, 0%, 5%, 1);
 
   &__canvas {
     position: absolute;
@@ -10,6 +11,7 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+    filter: blur(60px);
   }
 
   &__body {
