update home page

--- a/src/pages/_main/_main.module.scss
+++ b/src/pages/_main/_main.module.scss
@@ -19,6 +19,10 @@
   color: hsl(0, 0%, 80%);
 }
 
+.username {
+  color: hsl(0, 0%, 50%);
+}
+
 .links {
   display: flex;
   flex-direction: column;
