--- a/src/common/components/hero/hero.module.scss
+++ b/src/common/components/hero/hero.module.scss
@@ -1,11 +1,21 @@
 @import '~common/styles/mixins.scss';
 @import '~common/styles/functions.scss';
+@import '~common/components/theme/theme-provider-mixins.module.scss';
 
 .hero {
   display: flex;
   align-items: stretch;
   min-height: 100%;
-  background-color: hsla(0, 0%, 6%, 1);
+
+  @include themeLight {
+    background-color: hsla(0, 0%, 94%, 1);
+  }
+
+  @include themeDark {
+    background-color: hsla(0, 0%, 6%, 1);
+  }
+
+  @include themeChangeTransition(background-color);
 
   &__canvas {
     position: absolute;
@@ -16,6 +26,12 @@
     z-index: 1;
     filter: blur(60px);
     pointer-events: none;
+
+    @include themeLight {
+      opacity: 0.6;
+    }
+
+    @include themeChangeTransition(opacity);
   }
 
   &__body {
@@ -26,12 +42,8 @@
     flex-grow: 1;
     z-index: 3;
     padding: 0 get-rem(40);
-  }
-}
 
-@include screenMd {
-  .hero {
-    &__body {
+    @include screenMd {
       justify-content: center;
     }
   }
@@ -43,5 +55,14 @@
   top: get-rem(20);
   left: get-rem(20);
   width: get-rem(40);
-  fill: #fff;
+
+  @include themeDark {
+    fill: #fff;
+  }
+
+  @include themeLight {
+    fill: #000;
+  }
+
+  @include themeChangeTransition(fill);
 }
