--- a/src/common/components/hero/hero.module.scss
+++ b/src/common/components/hero/hero.module.scss
@@ -66,3 +66,11 @@
 
   @include themeChangeTransition(fill);
 }
+
+.theme-toggler {
+  position: absolute;
+  top: get-rem(20);
+  right: get-rem(20);
+  z-index: 10;
+  font-size: get-rem(20);
+}
