--- a/src/common/components/theme/theme-provider-mixins.module.scss
+++ b/src/common/components/theme/theme-provider-mixins.module.scss
@@ -20,3 +20,7 @@ $themeChangingDuration: 500;
     transition-duration: $themeChangingDuration + ms;
   }
 }
+
+:export {
+  themeChangingDuration: $themeChangingDuration;
+}
