--- a/src/common/components/typography/typography.module.scss
+++ b/src/common/components/typography/typography.module.scss
@@ -7,9 +7,9 @@ $lightThemeDarkGray: #47516B;
 $lightThemeGray: #646A7B;
 $lightThemeLightGray: #79819A;
 
-$darkThemeBlack: #EFEFF5;
+$darkThemeBlack: #E0E0EB;
 $darkThemeDarkGray: #C7CAD1;
-$darkThemeGray: #B8BCC6;
+$darkThemeGray: #AAAFBB;
 $darkThemeLightGray: #8E94A4;
 
 $accent: #516CF7;
@@ -22,6 +22,34 @@ $accent: #516CF7;
   line-height: 125%;
   color: inherit;
   text-decoration: none;
+
+  &[href]{
+    position: relative;
+    transition: color 100ms ease-in-out;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 100%;
+      box-sizing: content-box;
+      padding: 0.3em 0.2em;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+    }
+
+    &:hover {
+      @include themeLight {
+        color: #516CF7;
+      }
+
+      @include themeDark {
+        color: hsl(230, 95%, 75%);
+      }
+    }
+  }
 
   &_heading {
     font-size: get-rem(38);
