--- a/src/templates/cv/main/block/block.module.scss
+++ b/src/templates/cv/main/block/block.module.scss
@@ -53,10 +53,10 @@
 
   @include themeDark {
     background-color: #1B2132;
-    box-shadow: 0 get-rem(18) get-rem(10) rgba(255, 255, 255, 0.01),
-                0 get-rem(8) get-rem(8) rgba(255, 255, 255, 0.02),
-                0 get-rem(2) get-rem(4) rgba(255, 255, 255, 0.02);
-  }
+    box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.05),
+                0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.1),
+                0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.1);
+          }
 
   @include themeChangeTransition(background-color, box-shadow);
 
@@ -201,9 +201,9 @@
 
   @include themeDark {
     background-color: #1B2132;
-    box-shadow: 0 get-rem(18) get-rem(10) rgba(255, 255, 255, 0.01),
-      0 get-rem(8) get-rem(8) rgba(255, 255, 255, 0.02),
-      0 get-rem(2) get-rem(4) rgba(255, 255, 255, 0.02);
+    box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.05),
+                0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.1),
+                0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.1);
   }
 
   @include themeChangeTransition(background-color, box-shadow);
@@ -236,11 +236,6 @@
     line-height: normal;
     align-items: center;
     margin-top: get-rem(1);
-    transition: opacity 200ms ease-in-out;
-
-    &:hover {
-      opacity: 0.7;
-    }
 
     @include themeLight {
       color: #516CF7;
@@ -248,6 +243,16 @@
 
     @include themeDark {
       color: hsl(230, 95%, 75%);
+    }
+
+    @include theme($dark, $light) {
+      &[href]{
+        transition: opacity 200ms ease-in-out;
+
+        &:hover {
+          opacity: 0.7;
+        }
+      }
     }
   }
 
