--- a/src/common/components/typography/typography.module.scss
+++ b/src/common/components/typography/typography.module.scss
@@ -3,12 +3,12 @@
 @import '~common/components/theme/theme-provider-mixins.module.scss';
 
 $lightThemeBlack: #2E2E48;
-$lightThemeDarkGray: #47516B;
+$lightThemeDarkGray: #3D465C;
 $lightThemeGray: #646A7B;
 $lightThemeLightGray: #79819A;
 
 $darkThemeBlack: #E0E0EB;
-$darkThemeDarkGray: #C7CAD1;
+$darkThemeDarkGray: #D2D4DB;
 $darkThemeGray: #AAAFBB;
 $darkThemeLightGray: #8E94A4;
 
