--- a/src/common/components/theme/toggler/moon-icon.module.scss
+++ b/src/common/components/theme/toggler/moon-icon.module.scss
@@ -1,5 +1,9 @@
 @import '../theme-provider-mixins.module.scss';
 
+.icon {
+  transform: translateZ(0);
+}
+
 .moon-icon {
   animation: spin $themeChangingDuration * 2 + ms cubic-bezier(0.22, 1, 0.36, 1) forwards;
   transform-origin: center center;
