--- a/src/templates/cv/cv.module.scss
+++ b/src/templates/cv/cv.module.scss
@@ -16,9 +16,12 @@
   }
 
   @include themeChangeTransition(background-color);
+
+  @include print {
+    background-color: unset;
+    padding: 0;
+  }
 }
-
-
 
 .content {
   display: flex;
@@ -45,6 +48,13 @@
     }
 
     @include themeChangeTransition(box-shadow);
+  }
+
+  @include print {
+    width: 100%;
+    max-width: 100%;
+    border-radius: 0;
+    box-shadow: none;
   }
 }
 
