--- a/src/templates/cv/cv.module.scss
+++ b/src/templates/cv/cv.module.scss
@@ -3,6 +3,11 @@
 @import '~/components/theme/theme-provider-mixins.module.scss';
 
 .wrapper {
+  min-height: 100%;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+
   @include screenLg() {
     padding: get-rem(30);
   }
@@ -27,6 +32,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  width: 100%;
 
   @include screenLg() {
     margin: 0 auto;
