--- a/src/templates/cv/main/block/block.module.scss
+++ b/src/templates/cv/main/block/block.module.scss
@@ -42,27 +42,58 @@
 }
 
 .experience {
-  padding: get-rem(16) get-rem(24);
+  position: relative;
 
-  @include themeLight {
-    background-color: #ffffff;
-    box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
-                0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.02),
-                0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.02);
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    @include screenMd {
+      border-radius: get-rem(16);
+    }
+
+    @include themeLight {
+      box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
+                  0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.02),
+                  0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.02);
+    }
+
+    @include themeDark {
+      box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.05),
+                  0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.1),
+                  0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.1);
+    }
+
+    @include themeChangeTransition(box-shadow);
+
+    @include print {
+      filter: opacity(1);
+    }
   }
 
-  @include themeDark {
-    background-color: #1B2132;
-    box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.05),
-                0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.1),
-                0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.1);
-  }
+  &__content {
+    padding: get-rem(16) get-rem(24);
 
-  @include themeChangeTransition(background-color, box-shadow);
+    @include screenMd {
+      border-radius: get-rem(16);
+      padding: get-rem(16) get-rem(24) get-rem(16) get-rem(16);
+    }
 
-  @include screenMd {
-    border-radius: get-rem(16);
-    padding: get-rem(16) get-rem(24) get-rem(16) get-rem(16);
+    @include themeLight {
+      background-color: #ffffff;
+    }
+
+    @include themeDark {
+      background-color: #1B2132;
+    }
+
+    @include themeChangeTransition(background-color);
   }
 
   &__header {
@@ -182,31 +213,64 @@
 }
 
 .education {
+  position: relative;
   height: 100%;
-  padding: get-rem(16) get-rem(24) get-rem(16) get-rem(24);
-  display: flex;
-  flex-direction: row;
 
-  @include screenMd {
-    border-radius: get-rem(16);
-    padding: get-rem(16) get-rem(24) get-rem(16) get-rem(16);
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    @include screenMd {
+      border-radius: get-rem(16);
+    }
+
+    @include themeLight {
+      box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
+                  0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.02),
+                  0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.02);
+    }
+
+    @include themeDark {
+      box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.05),
+                  0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.1),
+                  0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.1);
+    }
+
+    @include themeChangeTransition(box-shadow);
+
+    @include print {
+      filter: opacity(1);
+    }
   }
 
-  @include themeLight {
-    background-color: #ffffff;
-    box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
-                0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.02),
-                0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.02);
-  }
+  &__content {
+    position: relative;
+    z-index: 1;
+    padding: get-rem(16) get-rem(24) get-rem(16) get-rem(24);
+    display: flex;
+    flex-direction: row;
 
-  @include themeDark {
-    background-color: #1B2132;
-    box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.05),
-                0 get-rem(8) get-rem(8) rgba(0, 0, 0, 0.1),
-                0 get-rem(2) get-rem(4) rgba(0, 0, 0, 0.1);
-  }
+    @include screenMd {
+      border-radius: get-rem(16);
+      padding: get-rem(16) get-rem(24) get-rem(16) get-rem(16);
+    }
 
-  @include themeChangeTransition(background-color, box-shadow);
+    @include themeLight {
+      background-color: #ffffff;
+    }
+
+    @include themeDark {
+      background-color: #1B2132;
+    }
+
+    @include themeChangeTransition(background-color);
+  }
 
   &__company-logo {
     width: get-rem(48);
