download cv button

--- a/src/components/typography/typography.module.scss
+++ b/src/components/typography/typography.module.scss
@@ -45,7 +45,7 @@ $accent: #516CF7;
       }
 
       @include themeDark {
-        color: hsl(230, 95%, 75%);
+        color: #8397fc;
       }
     }
   }
