--- a/src/templates/cv/main/block/block.module.scss
+++ b/src/templates/cv/main/block/block.module.scss
@@ -24,7 +24,6 @@
 }
 
 .experience-list {
-  margin: 0 get-rem(-24);
   padding: 0;
   list-style-type: none;
 
@@ -34,10 +33,6 @@
     &:last-child {
       margin-bottom: 0;
     }
-  }
-
-  @include screenMd {
-    margin: 0;
   }
 }
 
@@ -53,10 +48,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-
-    @include screenMd {
-      border-radius: get-rem(16);
-    }
+    border-radius: get-rem(16);
 
     @include themeLight {
       box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
@@ -80,10 +72,10 @@
   &__content {
     position: relative;
     z-index: 1;
-    padding: get-rem(16) get-rem(24);
+    padding: get-rem(16);
+    border-radius: get-rem(16);
 
     @include screenMd {
-      border-radius: get-rem(16);
       padding: get-rem(16) get-rem(24) get-rem(16) get-rem(16);
     }
 
@@ -192,11 +184,7 @@
   flex-direction: row;
   padding: 0;
   list-style-type: none;
-  margin: get-rem(-12) get-rem(-24) 0 get-rem(-36);
-
-  @include screenMd {
-    margin: get-rem(-12) 0 0 get-rem(-12);
-  }
+  margin: get-rem(-12) 0 0 get-rem(-12);
 
   &__item {
     flex: 1 1 100%;
@@ -227,10 +215,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-
-    @include screenMd {
-      border-radius: get-rem(16);
-    }
+    border-radius: get-rem(16);
 
     @include themeLight {
       box-shadow: 0 get-rem(18) get-rem(10) rgba(0, 0, 0, 0.01),
@@ -254,14 +239,10 @@
   &__content {
     position: relative;
     z-index: 1;
-    padding: get-rem(16) get-rem(24) get-rem(16) get-rem(24);
     display: flex;
     flex-direction: row;
-
-    @include screenMd {
-      border-radius: get-rem(16);
-      padding: get-rem(16) get-rem(24) get-rem(16) get-rem(16);
-    }
+    border-radius: get-rem(16);
+    padding: get-rem(16);
 
     @include themeLight {
       background-color: #ffffff;
